# class_api

./: .gitignore  AI_HANDOFF.md  LOCAL_BRINGUP.md  README.md  config.yaml.example  pyproject.toml
docs/: 00_index.md  01_identity_overview.md  02_guidelines.md  03_plan.md  10_architecture.md  11_api_integration.md  12_notion_schema.md  13_operations_runbook.md  14_developer_guide.md  15_demo_scenario.md  16_roadmap.md  17_test_readiness.md  18_teacher_dashboard_data_merge.md  19_academy_ops_hub.md
samples/: answer_sheet_score_sample.json  attendance_sample.json  end_summary_sample.json  exam_results_sample.csv  homework_submit_sample.json  schedule_sample.csv
scripts/: cloudflared-config.example.yml  install-windows-tasks.ps1  serve-webhook.sh  tunnel-quick.sh  windows-start-tunnel.ps1  windows-start-webhook.ps1
skills/: README.md  install.sh
tests/: test_action_queue.py  test_agent.py  test_agent_skills.py  test_api_diagnostics.py  test_career_pipeline.py  test_career_report.py  test_classin_client.py  test_config_ai_provider.py  test_consent.py  test_core_engine.py  test_course_dashboard.py  test_data_merge.py  test_deidentify.py  test_demo_filter.py  test_demo_seed.py  test_exams.py  test_fit_scorer.py  test_html_renderer.py  test_ingest_classin_lms.py  test_llm_provider.py  test_missing_homework_pipeline.py  test_neis_reference.py  test_neis_schedule.py  test_notification_quality.py  test_notify_history.py  test_notion_repo.py  test_notion_setup.py  test_readiness.py  test_report_composition.py  test_report_quality.py  test_saenggibu_schema.py  test_ui.py  (+4 more)
(+94 files in other folders)
