[project]
name = "classin-toolkit"
version = "0.1.0"
description = "ClassIn 서드파티 자동화 컨설팅 Toolkit (로컬 설치 + Claude 지능화)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "notion-client>=2.2",
    "anthropic>=0.40",
    "python-dateutil>=2.9",
    "typer>=0.13",
    "rich>=13.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "respx>=0.21", "ruff>=0.7"]

[project.scripts]
classin-toolkit = "classin_toolkit.cli.main:app"
classin-webhook = "classin_toolkit.cli.webhook:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/classin_toolkit"]

[tool.ruff]
line-length = 100
target-version = "py311"
